--- a/cxftest1Client/pom.xml
+++ b/cxftest1Client/pom.xml
@@ -22,6 +22,13 @@
             <artifactId>cxf-rt-transports-http</artifactId>
             <version>3.1.9</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.cxf.xjc-utils/cxf-xjc-runtime -->
+        <dependency>
+            <groupId>org.apache.cxf.xjc-utils</groupId>
+            <artifactId>cxf-xjc-runtime</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
 
         <dependency>
             <groupId>org.springframework</groupId>
